--- a/index.html
+++ b/index.html
@@ -15,21 +15,42 @@
     <title>AVICII</title>
 </head>
 <body>
-<div class="top">
-    <a href="index.html"><img class="top-sign" src="assets/images/avicii-sign.svg" alt="Avicii sign"></a>
-    <ul class="nav">
-        <li><a href="pages/biography.html">Životopis</a></li>
-        <li><a href="pages/rankings.html">Žebříček skladeb</a></li>
-        <li><a href="pages/memories.html">Vzpomínky</a></li>
-        <li><a href="pages/donate.html">Nadace</a></li>
-        <li><a href="pages/contacts.html">Kontakty</a></li>
-    </ul>
+
+<div class="wrapper">
+    <div class="first">
+        <div class="top">
+            <a href="index.html"><img class="top-sign" src="assets/images/avicii-sign.svg" alt="Avicii sign"></a>
+            <ul class="nav">
+                <li><a href="pages/biography.html">Životopis</a></li>
+                <li><a href="pages/rankings.html">Žebříček skladeb</a></li>
+                <li><a href="pages/memories.html">Vzpomínky</a></li>
+                <li><a href="pages/donate.html">Nadace</a></li>
+                <li><a href="pages/contacts.html">Kontakty</a></li>
+            </ul>
+        </div>
+        <figure class="avicii_quote">
+            <blockquote>
+                When I die,<br> people will<br> remember me for<br> the life I lived.<br> Not for money<br>I made.
+            </blockquote>
+            <figcaption>
+                Avicii
+            </figcaption>
+        </figure>
+        <div class="rip_banner">
+            <p>REST IN PEACE</p>
+            <p>8.9.1989 - 20.4.2018</p>
+        </div>
+        <img class="avicii_stature" src="assets/images/avicii-stature2.png" alt="Avicii stature">
+    </div>
+
+    <div>
+        <div>
+            <h3>Mike Poster</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur atque cum eligendi mollitia nam
+                nesciunt perferendis sequi ullam vitae voluptas?</p>
+        </div>
+    </div>
 </div>
-<div>
-    <h2 class="avicii_quote">When I die,<br> people will<br> remember me for<br> the life I lived.<br> Not for money<br> I made.</h2>
-    <h2>Avicii</h2>
-    <h2>8.9.1989 - 20.4.2018</h2>
-</div>
-<img class="avicii_stature" src="assets/images/avicii-stature.png" alt="Avicii stature">
+
 </body>
 </html>
