--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
 <div class="wrapper">
     <div class="first">
-        <div class="top">
-            <a href="index.html"><img class="top-sign" src="assets/images/avicii-sign.svg" alt="Avicii sign"></a>
+        <div class="top_nav">
+            <a href="index.html"><img class="top_sign" src="assets/images/avicii-sign.svg" alt="Avicii sign"></a>
             <ul class="nav">
                 <li><a href="pages/biography.html">Životopis</a></li>
                 <li><a href="pages/rankings.html">Žebříček skladeb</a></li>
@@ -28,19 +28,22 @@
                 <li><a href="pages/contacts.html">Kontakty</a></li>
             </ul>
         </div>
-        <figure class="avicii_quote">
-            <blockquote>
-                When I die,<br> people will<br> remember me for<br> the life I lived.<br> Not for money<br>I made.
-            </blockquote>
-            <figcaption>
-                Avicii
-            </figcaption>
-        </figure>
+        <div class="top_block">
+            <figure class="avicii_quote">
+                <blockquote>
+                    When I die,<br> people will<br> remember me for<br> the life I lived.<br> Not for money<br>I made.
+                </blockquote>
+                <figcaption>
+                    Tim Bergling
+                </figcaption>
+            </figure>
+            <img class="avicii_stature" src="assets/images/avicii-stature2.png" alt="Avicii stature">
+        </div>
+        
         <div class="rip_banner">
             <p>REST IN PEACE</p>
             <p>8.9.1989 - 20.4.2018</p>
         </div>
-        <img class="avicii_stature" src="assets/images/avicii-stature2.png" alt="Avicii stature">
     </div>
 
     <div>
