--- a/index.html
+++ b/index.html
@@ -25,11 +25,78 @@
         <li><a href="pages/contacts.html">Kontakty</a></li>
     </ul>
 </div>
-<div>
-    <h2 class="avicii_quote">When I die,<br> people will<br> remember me for<br> the life I lived.<br> Not for money<br> I made.</h2>
-    <h2>Avicii</h2>
-    <h2>8.9.1989 - 20.4.2018</h2>
+<div class="first-view">
+    <figure class="avicii_quote">
+        <blockquote>
+            <p>When I die,<br> people will<br> remember me for<br> the life I lived.<br> Not for money<br> I made.</p>
+        </blockquote>
+        <figcaption>Tim Bergling</figcaption>
+    </figure>
+
+    <div class="rip-sign">
+        <p>In loving memory</p>
+        <p>8.9.1989 - 20.4.2018</p>
+    </div>
 </div>
-<img class="avicii_stature" src="assets/images/avicii-stature.png" alt="Avicii stature">
+<div class="second-view">
+    <h2 class="artists__header">Umělci, kteří s ním spolupracovali</h2>
+    <div class="artists__wrapper">
+        <div class="artist__wrapper">
+            <figure>
+                <blockquote>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut autem dicta doloremque eaque error
+                        esse ex
+                        exercitationem facere fugit, laudantium molestias nisi odit pariatur quasi quia quis velit vero
+                        voluptatibus?
+                    </p>
+                </blockquote>
+                <figcaption>On</figcaption>
+            </figure>
+            <img src="assets/images/avicii-stature.png" alt="stature" width="150px">
+        </div>
+
+        <div class="artist__wrapper">
+            <figure>
+                <blockquote>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut autem dicta doloremque eaque error
+                        esse ex
+                        exercitationem facere fugit, laudantium molestias nisi odit pariatur quasi quia quis velit vero
+                        voluptatibus?
+                    </p>
+                </blockquote>
+                <figcaption>On</figcaption>
+            </figure>
+            <img src="assets/images/avicii-stature.png" alt="stature" width="150px">
+        </div>
+
+        <div class="artist__wrapper">
+            <figure>
+                <blockquote>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut autem dicta doloremque eaque error
+                        esse ex
+                        exercitationem facere fugit, laudantium molestias nisi odit pariatur quasi quia quis velit vero
+                        voluptatibus?
+                    </p>
+                </blockquote>
+                <figcaption>On</figcaption>
+            </figure>
+            <img src="assets/images/avicii-stature.png" alt="stature" width="150px">
+        </div>
+
+        <div class="artist__wrapper">
+            <figure>
+                <blockquote>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut autem dicta doloremque eaque error
+                        esse ex
+                        exercitationem facere fugit, laudantium molestias nisi odit pariatur quasi quia quis velit vero
+                        voluptatibus?
+                    </p>
+                </blockquote>
+                <figcaption>On</figcaption>
+            </figure>
+            <img src="assets/images/avicii-stature.png" alt="stature" width="150px">
+        </div>
+    </div>
+</div>
 </body>
 </html>
