--- a/index.html
+++ b/index.html
@@ -15,25 +15,27 @@
     <title>AVICII</title>
 </head>
 <body>
-<div class="top">
-    <a href="index.html"><img class="top-sign" src="assets/images/avicii-sign.svg" alt="Avicii sign"></a>
-    <ul class="nav">
-        <li><a href="pages/biography.html">Životopis</a></li>
-        <li><a href="pages/rankings.html">Žebříček skladeb</a></li>
-        <li><a href="pages/memories.html">Vzpomínky</a></li>
-        <li><a href="pages/donate.html">Nadace</a></li>
-        <li><a href="pages/contacts.html">Kontakty</a></li>
-    </ul>
+<div class="top__background">
+    <div class="top">
+        <a href="index.html"><img class="top__sign" src="assets/images/avicii-sign.svg" alt="Avicii sign"></a>
+        <ul class="nav">
+            <li><a href="pages/biography.html">Životopis</a></li>
+            <li><a href="pages/rankings.html">Žebříček skladeb</a></li>
+            <li><a href="pages/memories.html">Vzpomínky</a></li>
+            <li><a href="pages/donate.html">Nadace</a></li>
+            <li><a href="pages/contacts.html">Kontakty</a></li>
+        </ul>
+    </div>
 </div>
 <div class="first-view">
-    <figure class="avicii_quote">
+    <figure class="avicii__quote">
         <blockquote>
             <p>When I die,<br> people will<br> remember me for<br> the life I lived.<br> Not for money<br> I made.</p>
         </blockquote>
         <figcaption>Tim Bergling</figcaption>
     </figure>
 
-    <div class="rip-sign">
+    <div class="rip__sign">
         <p>In loving memory</p>
         <p>8.9.1989 - 20.4.2018</p>
     </div>
@@ -98,5 +100,37 @@
         </div>
     </div>
 </div>
+<footer>
+    <div class="footer">
+        <div class="footer__main">
+            <div class="footer__about">
+                <h2>About</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid amet asperiores, dolorem eaque
+                    earum
+                    eligendi</p>
+            </div>
+            <div class="footer__links">
+                <h2>Podstránky</h2>
+                <ul>
+                    <li><a href="pages/biography.html">Životopis</a></li>
+                    <li><a href="pages/rankings.html">Žebříček skladeb</a></li>
+                    <li><a href="pages/memories.html">Vzpomínky</a></li>
+                    <li><a href="pages/donate.html">Nadace</a></li>
+                    <li><a href="pages/contacts.html">Kontakty</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer__second">
+            <div class="footer__copyright">
+                <p>copyright dsfsdf</p>
+            </div>
+            <div>
+                <a href=""><img src="assets/images/avicii-logo.svg" alt="assets/images/avicii-logo.svg"></a>
+                <a href=""><img src="assets/images/avicii-logo.svg" alt="assets/images/avicii-logo.svg"></a>
+                <a href=""><img src="assets/images/avicii-logo.svg" alt="assets/images/avicii-logo.svg"></a>
+            </div>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
