--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
-<html lang="cs">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <link rel="icon" href="assets/images/avicii-logo.svg" type="image/svg+xml">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@300&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="styles/default.css">
     <link rel="stylesheet" href="styles/main.css">
     <title>AVICII</title>
 </head>
@@ -19,11 +16,11 @@
     <div class="top">
         <a href="index.html"><img class="top__sign" src="assets/images/avicii-sign.svg" alt="Avicii sign"></a>
         <ul class="nav">
-            <li><a href="pages/biography.html">Životopis</a></li>
-            <li><a href="pages/rankings.html">Žebříček skladeb</a></li>
-            <li><a href="pages/memories.html">Vzpomínky</a></li>
-            <li><a href="pages/donate.html">Nadace</a></li>
-            <li><a href="pages/contacts.html">Kontakty</a></li>
+            <li><a href="pages/biography.html">Biography</a></li>
+            <li><a href="pages/rankings.html">Track list</a></li>
+            <li><a href="pages/memories.html">Memories</a></li>
+            <li><a href="pages/donate.html">Foundation</a></li>
+            <li><a href="pages/contacts.html">Contacts</a></li>
         </ul>
     </div>
 </div>
@@ -40,8 +37,10 @@
         <p>8.9.1989 - 20.4.2018</p>
     </div>
 </div>
+<div class="artists__underline">
+    <h2 class="artists__header">Artists who collaborated with him</h2>
+</div>
 <div class="second-view">
-    <h2 class="artists__header">Umělci, kteří s ním spolupracovali</h2>
     <div class="artists__wrapper">
         <div class="artist__wrapper">
             <figure>
@@ -54,7 +53,7 @@
                 </blockquote>
                 <figcaption>On</figcaption>
             </figure>
-            <img src="assets/images/avicii-stature.png" alt="stature" width="150px">
+            <img src="assets/images/avicii-stature4.png" alt="stature" width="150px">
         </div>
 
         <div class="artist__wrapper">
@@ -68,7 +67,7 @@
                 </blockquote>
                 <figcaption>On</figcaption>
             </figure>
-            <img src="assets/images/avicii-stature.png" alt="stature" width="150px">
+            <img src="assets/images/avicii-stature4.png" alt="stature" width="150px">
         </div>
 
         <div class="artist__wrapper">
@@ -82,7 +81,7 @@
                 </blockquote>
                 <figcaption>On</figcaption>
             </figure>
-            <img src="assets/images/avicii-stature.png" alt="stature" width="150px">
+            <img src="assets/images/avicii-stature4.png" alt="stature" width="150px">
         </div>
 
         <div class="artist__wrapper">
@@ -96,7 +95,7 @@
                 </blockquote>
                 <figcaption>On</figcaption>
             </figure>
-            <img src="assets/images/avicii-stature.png" alt="stature" width="150px">
+            <img src="assets/images/avicii-stature4.png" alt="stature" width="150px">
         </div>
     </div>
 </div>
@@ -110,13 +109,13 @@
                     eligendi</p>
             </div>
             <div class="footer__links">
-                <h2>Podstránky</h2>
+                <h2>Subpages</h2>
                 <ul>
-                    <li><a href="pages/biography.html">Životopis</a></li>
-                    <li><a href="pages/rankings.html">Žebříček skladeb</a></li>
-                    <li><a href="pages/memories.html">Vzpomínky</a></li>
-                    <li><a href="pages/donate.html">Nadace</a></li>
-                    <li><a href="pages/contacts.html">Kontakty</a></li>
+                    <li><a href="pages/biography.html">Biography</a></li>
+                    <li><a href="pages/rankings.html">Track list</a></li>
+                    <li><a href="pages/memories.html">Memories</a></li>
+                    <li><a href="pages/donate.html">Foundation</a></li>
+                    <li><a href="pages/contacts.html">Contacts</a></li>
                 </ul>
             </div>
         </div>
@@ -125,9 +124,9 @@
                 <p>copyright dsfsdf</p>
             </div>
             <div>
-                <a href=""><img src="assets/images/avicii-logo.svg" alt="assets/images/avicii-logo.svg"></a>
-                <a href=""><img src="assets/images/avicii-logo.svg" alt="assets/images/avicii-logo.svg"></a>
-                <a href=""><img src="assets/images/avicii-logo.svg" alt="assets/images/avicii-logo.svg"></a>
+                <img src="assets/images/avicii-logo.svg" alt="Avicii sign">
+                <img src="assets/images/avicii-logo.svg" alt="Avicii sign">
+                <img src="assets/images/avicii-logo.svg" alt="Avicii sign">
             </div>
         </div>
     </div>
