--- a/pages/error.html
+++ b/pages/error.html
@@ -8,7 +8,7 @@
 
     <link rel="icon" href="../assets/images/avicii-logo.svg" type="image/svg+xml">
     <link rel="stylesheet" href="../styles/default.css">
-    <link rel="stylesheet" href="../styles/rankings.css">
+    <link rel="stylesheet" href="../styles/error.css">
     <title>AVICII</title>
 </head>
 <body>
@@ -17,7 +17,7 @@
         <a href="../index.html"><img class="top__sign" src="../assets/images/avicii-sign.svg" alt="Avicii sign"></a>
         <ul class="nav">
             <li><a href="../pages/biography.html">Biography</a></li>
-            <li><a href="../pages/rankings.html">Ranking</a></li>
+            <li><a href="../pages/rankings.html">Track list</a></li>
             <li><a href="../pages/memories.html">Memories</a></li>
             <li><a href="../pages/donate.html">Foundation</a></li>
             <li><a href="../pages/contacts.html">Contacts</a></li>
@@ -25,24 +25,8 @@
     </div>
 </div>
 <div class="first-view">
-    <h1>Tracks ranking</h1>
-    <div>
-        <div class="track">
-            <p class="track__number">1</p>
-            <img src="../assets/ep/hey-brother.jpg" class="track__poster" alt="Hey brother">
-            <p class="track__name">Hey brother</p>
-            <div class="track__buttons">
-                <a href="https://music.youtube.com/watch?v=OjpX8ILe2N4" class="track__play-link">
-                    <img src="../assets/icons/youtube.png" class="track__play" alt="Play on Youtube">
-                </a>
-                <a href="https://open.spotify.com/track/4lhqb6JvbHId48OUJGwymk?si=1b9de2b016c94813"
-                   class="track__play-link">
-                    <img src="../assets/icons/spotify.png" class="track__play" alt="Play on Spotify">
-                </a>
-                <button class="track__up-button">Vote up</button>
-            </div>
-        </div>
-    </div>
+    <h2>Not found</h2>
+    <p>Sorry, we can't find it here.</p>
 </div>
 <footer>
     <div class="footer">
