--- a/pages/biography.html
+++ b/pages/biography.html
@@ -2,9 +2,216 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <link rel="icon" href="../assets/images/avicii-logo.svg" type="image/svg+xml">
+    <link rel="stylesheet" href="../styles/default.css">
+    <link rel="stylesheet" href="../styles/biography.css">
+    <title>AVICII</title>
 </head>
 <body>
-
+<div class="top__background">
+    <div class="top">
+        <a href="../index.html"><img class="top__sign" src="../assets/images/avicii-sign.svg" alt="Avicii sign"></a>
+        <ul class="nav">
+            <li><a href="../pages/biography.html">Biography</a></li>
+            <li><a href="../pages/rankings.html">Track list</a></li>
+            <li><a href="../pages/memories.html">Memories</a></li>
+            <li><a href="../pages/donate.html">Foundation</a></li>
+            <li><a href="../pages/contacts.html">Contacts</a></li>
+        </ul>
+    </div>
+</div>
+<div class="first-view">
+    <h1>Biography</h1>
+    <div class="quick-facts">
+        <h2>Quick Facts</h2>
+        <ul>
+            <li>Birthday: <span class="mark__white"> September 8, 1989</span></li>
+            <li>Died At Age: <span class="mark__white"> 28</span></li>
+            <li>Also Known As: <span class="mark__white"> Tim Bergling</span></li>
+            <li>Born Country: <span class="mark__white"> Sweden</span></li>
+            <li>Born In: <span class="mark__white"> Stockholm, Sweden</span></li>
+            <li>Famous As: <span class="mark__white"> Musician, DJ</span></li>
+            <li>Height: <span class="mark__white"> 5'11" (180 cm)</span></li>
+            <li>Father: <span class="mark__white"> Klas Bergling</span></li>
+            <li>Mother: <span class="mark__white"> Anki Lidén</span></li>
+            <li>Siblings: <span class="mark__white"> Anton Körberg, David Bergling, Linda Sterner</span></li>
+            <li>Died On: <span class="mark__white"> April 20, 2018</span></li>
+            <li>Place Of Death: <span class="mark__white"> Muscat, Oman</span></li>
+            <li>City: <span class="mark__white"> Stockholm, Sweden</span></li>
+            <li>Cause Of Death: <span class="mark__white"> Suicide</span></li>
+        </ul>
+    </div>
+    <div>
+        <h2>Who was Avicii?</h2>
+        <p>Tim Bergling, better known by his stage name, “Avicii,” was a Swedish musician, DJ, remix artist, and
+            record producer. Born and raised in Stockholm, he was one of the most popular musicians of his time.
+            He
+            showcased his music skills online to receive exposure. Avicii started making music at the age of 16
+            and
+            began posting his singles on various online music forums. Soon, he caught the attention of a music
+            label. In 2011, he achieved nationwide fame with his single ‘Levels.’ Two years later, he released
+            his
+            debut album, ‘True.’ His music touched a new level of experimentation, as he mixed electronic music
+            with
+            several genres of popular music and led the album to become a major commercial and critical success.
+            The
+            album made its way among the top 10 hits in more than 15 countries around the world, such as Sweden,
+            US,
+            and Australia. For the next few years, he toured around the globe, amassing a large fan following,
+            and
+            became one of the most popular DJs of this generation. However, Avicii suffered from serious
+            mental-health issues and committed suicide on April 20, 2018.</p>
+    </div>
+    <div>
+        <h2>Childhood & Early Life</h2>
+        <ul>
+            <li>Avicii was born Tim Bergling, on September 8, 1989, in Stockholm, Sweden, to Klas Bergling and
+                Anki
+                Lidén. His mother was a small-time actor who had appeared in more than 50 Swedish films and TV
+                series. He was one of the four children of his parents and was heavily influenced by his older
+                brother, who also happened to be a musician and DJ.
+            </li>
+            <li>Avicii started making music at the age of 16. Within a few months, he started posting his music
+                on
+                various online electronic music forums. He remixed a number of classic songs in his early years.
+                His
+                work reached the right people, and he soon started getting approached by well-known music
+                labels.
+                His music resembled that of the popular group ‘Swedish House Mafia,’ and that helped him earn a
+                huge
+                fan following.
+            </li>
+            <li>Avicii was also inspired by the music of Daft Punk and Steve Angello. He blended deep bass house
+                sounds with melodic sounds. His music was appreciated by DJ Tiësto and Pete Tong. Tiësto
+                introduced
+                Avicii to a number of professional DJs and also set up live shows for him, at small venues.
+            </li>
+            <li>By 2010, Avicii had started working as a small-time DJ, remixing for artists such as Little
+                Boots
+                and Robyn. Meanwhile, he continued to release his own singles, such as ‘Bromance’ and ‘My
+                Feelings
+                for You.’ ‘Seek Bromance,’ the remixed version of his single ‘Bromance,’ with vocals by Amanda
+                Wilson, was a huge success.
+            </li>
+        </ul>
+    </div>
+    <img src="../assets/images/avicii-stage.png" class="avicii__hi" alt="Avicii on stage">
+    <div>
+        <h2>Career</h2>
+        <ul>
+            <li>His initial successes got Avicii acquainted with the right people in the music industry. By 2011, he had
+                already finished working on his breakthrough single, ‘Levels.’ The song included vocals from the famous
+                gospel-inspired 60s song ‘Something’s got a Hold on Me’ by Etta James. ‘Levels’ made waves nationally
+                and internationally and established Avicii in the mainstream music arena. The song made its place among
+                the top 10 hits of many European countries and also made waves across the US.
+            </li>
+            <li>Riding high on the success of ‘Levels,’ Avicii received the surprise of his life when he was approached
+                by superstar DJ David Guetta, who suggested a collaborative track.
+            </li>
+            <li>The collaboration resulted in the single ‘Sunshine,’ which became an instant international success. It
+                was later nominated for the ‘Grammy’ award for the ‘Best Dance Recording.’
+            </li>
+            <li>The same year, he also faced a slight controversy. A portion of his single ‘Fade into Darkness’ was
+                allegedly used without his permission by Leona Lewis, on her single ‘Collide.’ Leona did not credit
+                Avicii, and the entire matter went to court. Subsequently, Leona’s lawyer offered Avicii a collaborative
+                album with his client. Avicii accepted the offer, and the matter was resolved.
+            </li>
+            <li>At the 2012 ‘Ultra Music Festival’ in Miami, Avicii released his new track, ‘Girl Gone Wild’ with
+                Madonna. At the same event, he released another single, ‘Superlove’ with Lenny Kravitz. The same year,
+                he gained two million likes on his ‘Facebook’ page. Following this, he released a track titled ‘Two
+                Million’ and made it free for download on the music-streaming platform ‘SoundCloud.’
+            </li>
+            <li>Over the next few months, he released some more successful singles, such as ‘Silhouettes,’ ‘Dancing in
+                my Head,’ ‘Stay with You,’ and ‘Let it Go.’ The last two songs were from his debut studio album, which
+                he announced he would release in 2013. Meanwhile, his success streak continued in 2012, with several new
+                collaborations. He collaborated with Nicky Romero for the single ‘I Could Be the One,’ which became a
+                major hit with the American audiences. The song was featured on several American reality shows and
+                European radio shows.
+            </li>
+            <li>In early 2013, Avicii released ‘Wake Me Up,’ one of his most meaningful and most successful singles to
+                date. The song topped the charts in more than 20 countries across the world and is known as his most
+                successful single. In mid-2013, he announced in an interview that his debut studio album, ‘True,’ would
+                be available for sale by the end of that year. He also gave a glimpse into the album by saying that he
+                had heavily used the new genre “folktronica,” a blend of folk music and electronic music.
+            </li>
+            <li>‘Wake Me Up’ became the fastest-selling single in the UK by the end of July. The single also made a
+                record for staying on the top of ‘Billboard’s ‘Dance/Electronic’ music chart for 14 weeks. Avicii
+                released more singles from the album in the following months, only increasing the curiosity about his
+                album.
+            </li>
+            <li>The album ‘True’ was released in late 2013 and featured several established artists, such as Nile
+                Rodgers and Adam Lambert. A few more songs from the album, such as ‘Hey Brother’ and ‘Addicted to You,’
+                became successful, and the album was certified “platinum” by the ‘Recording Industry Association of
+                America’ (RIAA). The following year, Avicii released the club remix version of the album, ‘True: Avicii
+                by Avicii.’ The same year, he collaborated with Chris Martin from the legendary rock band ‘Coldplay,’
+                for the single ‘A Sky Full of Stars.’
+            </li>
+            <li>In late 2015, Avicii released his second album, ‘Stories,’ and merged pop music with electronic sounds.
+                The album reached the top of the ‘Billboard’ dance chart. Some of his other successful singles from this
+                period were a remix of Nina Simone’s classic jazz song ‘Feeling Good,’ ‘Tracks of my Tears,’ ‘Divine
+                Sorrow,’ and ‘Heaven.’
+            </li>
+            <li>Due to frequent live tours, he became exhausted. In 2016, he announced that he would be retiring from
+                live shows. His last live performance was in Ibiza.
+            </li>
+        </ul>
+    </div>
+    <div>
+        <h2>Personal Life & Death</h2>
+        <ul>
+            <li>Avicii was known to be a heavy alcoholic, and the habit had impacted his health. In 2012, he was
+                diagnosed with acute pancreatitis and had his gall bladder and appendix removed. Despite the health
+                concerns, he kept touring continuously and risked his mental and physical well-being.
+            </li>
+            <li>By 2017, he started talking about depression and suicidal thoughts openly. Depression is highly
+                prevalent in artists, and Avicii became one of its latest victims. The pressure and the lack of privacy
+                that fame brought, perhaps, contributed to his failing mental health.
+            </li>
+            <li>On April 20, 2018, his lifeless body was found in his hotel room near Muscat, Oman. A few days later,
+                his family revealed that he had cut himself and bled to death. With Avicii’s suicide, another bright
+                star of the music industry dimmed forever. The concept of the “tortured artist” had once again made its
+                presence felt. He was 28 years old at the time of his death, but his music shall always remain ageless
+                and immortal.
+            </li>
+        </ul>
+    </div>
+    <img src="../assets/images/stage.jpg" class="avicii__stage" alt="Avicii on stage">
+</div>
+<footer>
+    <div class="footer">
+        <div class="footer__main">
+            <div class="footer__about">
+                <h2>About</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid amet asperiores, dolorem eaque
+                    earum
+                    eligendi</p>
+            </div>
+            <div class="footer__links">
+                <h2>Subpages</h2>
+                <ul>
+                    <li><a href="../pages/biography.html">Biography</a></li>
+                    <li><a href="../pages/rankings.html">Track list</a></li>
+                    <li><a href="../pages/memories.html">Memories</a></li>
+                    <li><a href="../pages/donate.html">Foundation</a></li>
+                    <li><a href="../pages/contacts.html">Contacts</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer__second">
+            <div class="footer__copyright">
+                <p>copyright dsfsdf</p>
+            </div>
+            <div>
+                <img src="../assets/images/avicii-logo.svg" alt="Avicii sign">
+                <img src="../assets/images/avicii-logo.svg" alt="Avicii sign">
+                <img src="../assets/images/avicii-logo.svg" alt="Avicii sign">
+            </div>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
